6-k8s-fibonacci-multi-container-calculator/k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        # We need to add a persistent volume so stored data isnt lost.
        # As well as Docker volumes, this will store data in the host machine file sysyem.
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage # Name of the volume defined above.
              mountPath: /var/lib/postgresql/data # Directory in the computer where the volume will be mounted.
              subPath: postgres
